# e2e-tests

./: .gitignore  README.rst  pyproject.toml  test-report.html  test-report.xml
e2e_tests/: consts.py
scripts/: run_test.sh
tests/: conftest.py  test_e2e_tests.py
tests/utils/: helper.py
