[tool.poetry]
name = "e2e-tests"
version = "0.1.0"
description = ""
authors = ["Eyal Lev <eyal.lev25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
